fix: avoid showing invisible text

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,6 +17,16 @@
 @import "mode/dark.scss";
 @import "components/toggler.scss";
 
+@font-face {
+  font-family: "Pacifico";
+  font-style: normal;
+  font-weight: 400;
+  src: local("Pacifico Regular"), local("Pacifico-Regular"),
+    url(https://fonts.gstatic.com/s/pacifico/v12/FwZY7-Qmy14u9lezJ-6H6MmBp0u-.woff2)
+      format("woff2");
+  font-display: swap;
+}
+
 html {
   font-size: 62.5%;
 }
